RESOLVED FIXED 243953
Charset of blobs are incorrectly ignored
https://bugs.webkit.org/show_bug.cgi?id=243953
Summary Charset of blobs are incorrectly ignored
Chris Dumez
Reported 2022-08-15 13:42:15 PDT
Charset of blobs are incorrectly ignored. This is causing this test to fail: imported/w3c/web-platform-tests/FileAPI/url/url-charset.window.html
Attachments
Chris Dumez
Comment 1 2022-08-15 13:46:11 PDT
EWS
Comment 2 2022-08-15 23:58:11 PDT
Committed 253458@main (0f75f96f0731): <https://commits.webkit.org/253458@main> Reviewed commits have been landed. Closing PR #3321 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-08-15 23:59:16 PDT
Note You need to log in before you can comment on or make changes to this bug.