Charset of blobs are incorrectly ignored https://bugs.webkit.org/show_bug.cgi?id=243953

Reviewed by Geoffrey Garen.

We were failing to set the text encoding name on the ResourceResponse
based on the charset present in the Content-Type HTTP header.
Normally, it gets initialized lazily by ResourceResponse::textEncodingName()
based on the Content-Type header. However, this doesn't happen for Blobs
because there is no underlying NSURLRequest.

* LayoutTests/imported/w3c/web-platform-tests/FileAPI/url/url-charset.window-expected.txt:
* Source/WebCore/platform/network/BlobResourceHandle.cpp:
(WebCore::BlobResourceHandle::notifyResponseOnSuccess):
* Source/WebCore/platform/network/HTTPParsers.h:
* Source/WebKit/NetworkProcess/NetworkDataTaskBlob.cpp:
(WebKit::NetworkDataTaskBlob::dispatchDidReceiveResponse):

Canonical link: https://commits.webkit.org/253458@main